feat: AIMD 유량 제어 및 결제 Webhook 장애 복구 구현
## AIMD 유량 제어 (대기열 승격 속도 동적 조절)
- EntryPromoteThread: AIMD 알고리즘 적용
  - 혼잡 감지: HLEN(ENTRY_TOKEN) >= 100 시 batchSize × 0.5 (MD)
  - 정상 상태: batchSize + 5 (AI), 범위 [5, 200]
- Lua 스크립트: ZRANGE 0 -1 → ZRANGE 0 batchSize-1 (틱당 승격 상한)
- RedisConfig: ENTRY_TOKEN_STORAGE_KEY_NAME 상수 추가
- EventRegisterService/EventEditService: 이벤트 등록/수정 시 ENTRY_QUEUE_COUNT Redis 초기화
- WaitingQueueEntryService: put → putIfAbsent (HSETNX, 경합 조건 수정)

## 결제 Webhook 장애 복구
- PurchaseSeat 엔티티 신규: /payments/init 시점에 선택 좌석 DB 영속화
- PurchaseSeatRepository 신규: findByPurchase() 제공
- PurchaseRepository: findByPaymentUuidWithLock() 추가 (SELECT FOR UPDATE)
- PurchaseService.initiatePayment(): PurchaseSeat 저장 로직 추가
- WebhookService 전면 재작성
  - @Transactional + 비관적 락으로 중복 Webhook 방어 (EC1)
  - 티켓 존재 시 상태만 DONE 복구 (EC2)
  - 좌석 선점 충돌 시 autoRefund() (EC3)
  - PurchaseSeat 기반 티켓 재생성 (EC4)

## 문서
- CLAUDE.md: 결제 장애 복구 시나리오 및 대기열 아키텍처 업데이트
- README.md: Webhook 기반 장애 복구 항목 추가
- 트러블슈팅_유량제어_AIMD.md 신규
- 트러블슈팅_결제_Webhook_장애복구.md 신규
- 트러블슈팅_대기열_설계.md 신규

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>