@@ -175,8 +175,8 @@ public class SecurityConfig {
 
 		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
 		configuration.setAllowedHeaders(
-			Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin", "entryAuthToken"));
-		configuration.setExposedHeaders(List.of("Authorization", "entryAuthToken"));
+			Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin"));
+		configuration.setExposedHeaders(List.of("Authorization"));
 		configuration.setAllowCredentials(true);
 		configuration.setMaxAge(3600L);
 
